--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,5 +1,9 @@
   <ul>
     <li> <a href="http://georgeredinger.github.com/"> Home | </a> </li>
     <li> <a href="http://georgeredinger.com"> About | </a> </li>
-    <li> <a href="http://github.com/georgeredinger/"> Code  </a> </li>
-  </ul>
+    <li> <a href="http://github.com/georgeredinger">GitHub | </a></li>
+    <li> <a href="http://www.linkedin.com/in/georgeredinger">Linked In | </a></li>
+    <li> <a href="http://georgeredinger.com">Blog | </a></li>
+    <li> <a href="http://facebook.com/george.redinger">F8 | </a></li>
+    <li> <a href="http://twitter.com/gredinger">Twitter</a></li>
+ </ul>
