--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,7 +27,7 @@
     <h3>Posts</h3>
     <ul class="posts">
       {% for post in site.posts %}
-          <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
+      <li><span></span> &raquo; <a href="{{ post.url }}"> {{ post.title }}</a>  -  <small>{{ post.date | date_to_string }}</small></li>
       {% endfor %}
     </ul>
   </div>
