--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -27,7 +27,7 @@
   <div id="disqus_thread"> </div>
 
     <script type="text/javascript">
-      var disqus_identifier= "{{ post.url }}" ;
+      var disqus_identifier= "{{ page.url }}" ;
        (function() {
          var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
            dsq.src = 'http://georgescode.disqus.com/embed.js';
