--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -17,10 +17,7 @@
     {% include nav.html %}
   </div>
 
-  <div id="sidebar"
-    {% include sidebar.html %}
-    </div>
-  <div id="main">
+  <div id="mainwide">
         <h1>{{ post.title }}</h1>
             {{ content }}
   </div>
