many problems with bullets, font sizes alignment and column width

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,6 +1,6 @@
   <ul>
-    <li> <a href="http://georgeredinger.github.com/"> Home | </a> </li>
-    <li> <a href="http://georgeredinger.github.com/about"> About | </a> </li>
+    <li> <a href="/"> Home | </a> </li>
+    <li> <a href="/about"> About | </a> </li>
     <li> <a href="http://github.com/georgeredinger">GitHub | </a></li>
     <li> <a href="http://www.linkedin.com/in/georgeredinger">Linked In | </a></li>
     <li> <a href="http://georgeredinger.com">Blog | </a></li>
