--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,4 +1,12 @@
-<h2> Projects</h2>
+<ul>
+ <li><a href="/about.html">About me</a></li>                                                           
+ <li><a href="http://github.com/georgeredinger">GitHub</a></li>
+ <li><a href="http://twitter.com/gredinger">Twitter</a></li>
+</ul>
+<hr/>
+ <h2>Search This Site</h2>
+ <div id="search"></div>
+
  <div id="github-badge">
      <script type="text/javascript" charset="utf-8">
        GITHUB_USERNAME = "georgeredinger";
@@ -10,5 +18,3 @@
      </script>
      <script src="http://drnicjavascript.rubyforge.org/github_badge/dist/github-badge-launcher.js" type="text/javascript"></script>
   </div >
-
-  </ul>
