--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,5 +1,5 @@
 <ul>
- <li><a href="/about.html">About me</a></li>                                                           
+ <li><a href="/about">About me</a></li>                                                           
  <li><a href="http://github.com/georgeredinger">GitHub</a></li>
  <li><a href="http://twitter.com/gredinger">Twitter</a></li>
 </ul>
