google meta web master tools

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,6 +3,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <meta name="keywords" content="george redinger" />
+    <meta name="google-site-verification" content="zBWBX-NIO4GfD4p3Ib5tDyHb87NzkQxg3j21OAsLo-Q" />
     <meta name="description" content="george redinger code" />
     <link rel="stylesheet" href="/stylesheets/styles.css" type="text/css"> 
     <link rel="stylesheet" href="/stylesheets/syntax.css" type="text/css"> 
