--- a/_includes/google_ajax_search.html
+++ b/_includes/google_ajax_search.html
@@ -13,7 +13,7 @@ function OnLoad() {
   var webSearch = new google.search.WebSearch();
 
   // Restrict our search to pages from this site
-  webSearch.setSiteRestriction('georgeredinger.github.com.com');
+  webSearch.setSiteRestriction('georgeredinger.github.com');
 
   // Add the searcher to the SearchControl
   searchControl.addSearcher(webSearch);
