--- a/_includes/google_ajax_search.html
+++ b/_includes/google_ajax_search.html
@@ -1,27 +1,16 @@
 <script src="http://www.google.com/jsapi?key=ABQIAAAAP_8YDI9gsJp2Kb1LN84m6RRhG9pSH20TEz9wwPtMOR-PPl8h0RSc49wL0W0HC4Uxmli1wOFXeVivkQ" type="text/javascript"></script>
 
 <script language="Javascript" type="text/javascript">
-//<![CDATA[
-
 google.load("search", "1");
-
 function OnLoad() {
-  // Create a search control
+  console.log "search loaded";
   var searchControl = new google.search.SearchControl();
-
-  // Add in a WebSearch
   var webSearch = new google.search.WebSearch();
-
-  // Restrict our search to pages from this site
   webSearch.setSiteRestriction('georgeredinger.github.com');
-
-  // Add the searcher to the SearchControl
   searchControl.addSearcher(webSearch);
-
-  // tell the searcher to draw itself and tell it where to attach
   searchControl.draw(document.getElementById("search"));
+  console.log webSearch;
+  console.log "search finished";
 }
 google.setOnLoadCallback(OnLoad);
-
-//]]>
 </script>
