--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -7,6 +7,11 @@
  <h3>Search This Site</h3>
  <div id="search"></div>
  <hr/>
+ <div id="pair-with-me">
+  <a href="mailto:george@georgeredinger.com" title="Pair program with me!">
+        <img  src="http://pairprogramwith.me/badge.png" width="75%" height="75%"  alt="Pair program with me!" />
+  </a>
+ </div>
  <div id="github-badge">
      <script type="text/javascript" charset="utf-8">
        GITHUB_USERNAME = "georgeredinger";
@@ -18,3 +23,4 @@
      </script>
      <script src="http://drnicjavascript.rubyforge.org/github_badge/dist/github-badge-launcher.js" type="text/javascript"></script>
   </div >
+
